--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
     ],
     "rules": {
         "no-use-before-define": 0,
-        "linebreak-style": ["error", "windows"]
+        "linebreak-style": 0
 
     }
 }
