--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@use-expo/font": "^2.0.0",
     "date-fns": "^2.19.0",
     "expo": "~40.0.0",
+    "expo-ads-admob": "~8.4.0",
     "expo-status-bar": "~1.0.3",
-    "firebase": "^8.3.2",
+    "firebase": "^8.4.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
